kubernetes/samples/istio/003-traffic-splitting-by-http-header/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: demo
  name: company-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: demo
  name: company-app-vs
spec:
  hosts:
    - "*"
  gateways:
    - company-app-gateway
  http:
    - name: "company-app-v2-route"
      match:
        - headers:
            x-version:
              exact: "v2"
      route:
        - destination:
            host: "company-app.demo.svc.cluster.local"
            port:
              number: 8080
            subset: v2
    - name: "company-app-default-route"
      route:
        - destination:
            host: "company-app.demo.svc.cluster.local"
            port:
              number: 8080
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: demo
  name: company-app-dr
  # If you don’t specify the traffic policy to ISTIO_MUTUAL, you will see 503 HTTP errors
  #coming from the service. To check if the mutual TLS is the culprit you can use the tls-check
  #command to see what type of authentication is defined between the caller and the destionation
spec:
  host: "company-app.demo.svc.cluster.local"
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
