kubernetes/samples/istio/003-traffic-splitting-by-http-header/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: demo
  name: address-app-vs
spec:
  hosts:
    - address-app
  http:
    - name: "address-app-v2-route"
      match:
        - sourceLabels:
            version: v2
      route:
        - destination:
            host: "address-app.demo.svc.cluster.local"
            port:
              number: 8081
            subset: v2
    - name: "address-app-v1-route"
      match:
        - sourceLabels:
            version: v1
      route:
        - destination:
            host: "address-app.demo.svc.cluster.local"
            port:
              number: 8081
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: demo
  name: job-app-vs
spec:
  hosts:
    - job-app
  http:
    - name: "job-app-v2-route"
      match:
        - sourceLabels:
            version: v2
      route:
        - destination:
            host: "job-app.demo.svc.cluster.local"
            port:
              number: 8082
            subset: v2
    - name: "job-app-v1-route"
      match:
        - sourceLabels:
            version: v1
      route:
        - destination:
            host: "job-app.demo.svc.cluster.local"
            port:
              number: 8082
            subset: v1
